--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,13 @@
-<!-- >Welcome to {{ title }}
+<div class="container">
+  <app-navi></app-navi>
+  <div class="row">
+    <div class="col-md-3">
+      <app-category></app-category>
+    </div>
+    <div class="col-md-9">
+      <app-product> </app-product>
+    </div>
+  </div>
 
-Hello {{ user }}
-
-{{ product1.productName }}
-<ul>
-
-  <li *ngFor="let product of products">{{ product.productName }}</li>
-</ul>
--->
-
-<app-navi></app-navi>
-<app-category></app-category>
-<app-product> </app-product>
-<router-outlet></router-outlet>
+  <router-outlet></router-outlet>
+</div>
