"cart operations added 18/03/2021"

--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -5,6 +5,18 @@
 >
   <span class="visually-hidden">Loading...</span>
 </div>
+
+<div class="mb-3">
+  <label for="filterText" class="form-label">Product Search</label>
+  <input
+    type="text"
+    [(ngModel)]="filterText"
+    class="form-control"
+    id="filterText"
+    placeholder="Search"
+  />
+</div>
+<div *ngIf="filterText" class="alert alert-success">{{ filterText }}</div>
 <table *ngIf="dataLoaded == true" class="table">
   <thead>
     <tr>
@@ -12,15 +24,28 @@
       <th>Ürün Adı</th>
       <th>Kategori Id</th>
       <th>Fiyatı</th>
+      <th>Kdv'li Fiyat</th>
       <th>Adedi</th>
+      <th></th>
     </tr>
   </thead>
-
-  <tr *ngFor="let product of products">
-    <td>{{ product.productId }}</td>
-    <td>{{ product.productName }}</td>
-    <td>{{ product.categoryId }}</td>
-    <td>{{ product.unitPrice }}</td>
-    <td>{{ product.unitsInStock }}</td>
-  </tr>
+  <tbody>
+    <tr *ngFor="let product of products | filterPipe: filterText">
+      <td>{{ product.productId }}</td>
+      <td>{{ product.productName | uppercase }}</td>
+      <td>{{ product.categoryId }}</td>
+      <td>{{ product.unitPrice | currency }}</td>
+      <td>{{ product.unitPrice | vatAdded: 18 | currency }}</td>
+      <td>{{ product.unitsInStock }}</td>
+      <td>
+        <button
+          (click)="addToCart(product)"
+          type="button"
+          class="btn btn-success"
+        >
+          Sepete Ekle
+        </button>
+      </td>
+    </tr>
+  </tbody>
 </table>
